Add breaking change notice to landing page.

--- a/site/index.html
+++ b/site/index.html
@@ -61,6 +61,11 @@
 
 <p>This is editable text. You can focus it and start typing. A calculation cell will open if you click on it. All calculations will update if you press <strong>Enter</strong> to close a calculation cell.</p>
 
+<h3>Breaking Change</h3>
+
+<p>Functions can no longer be called before they are defined.<br>
+Modules are now called with an <em>import</em> function instead of a fetch function. Calling a data frame CSV file still uses a fetch function.</p>
+
 <p>This week’s example:</p>
 
 <h3>Special Relativity</h3>
