Change landing page slogan.

--- a/site/index.html
+++ b/site/index.html
@@ -40,7 +40,7 @@
  
 <article>
 
-<div id="slogan"><h4>Getting calculations right</h4></div>
+<div id="slogan"><h4>Calculate and communicate</h4></div>
 
 <p id="browser-support"></p>
 
