Edit landing page example, importedParameters.

--- a/site/index.html
+++ b/site/index.html
@@ -65,7 +65,7 @@
 
 <h3>Imported Parameters</h3>
 
-<p>The calculations for a big project are often broken up into several documents. But there are always a few parameters that are common to the entire project. Hurmet enables you to define those parameters once, in a module, and then import them into each of the calculation documents.</p>
+<p>In a big project, the calculations are often broken up into several documents. But there are always a few parameters that are common to the entire project. Hurmet enables you to define those parameters once, in a module, and then import them into each of the calculation documents.</p>
 
 <p>Such an import statement is written this way:</p>
 
