--- a/site/index.html
+++ b/site/index.html
@@ -61,51 +61,18 @@
 
 <p>This is editable text. You can focus it and start typing. A calculation cell will open if you click on it. All calculations will update if you press <strong>Enter</strong> to close a calculation cell.</p>
 
-<h4>Breaking Change</h4>
-
-<p>The source code for data frames must now be pipe-separated values, not comma-separated values.</p>
-
-<p>This week’s example:</p>
-
-<h3>Active Tables</h3>
-<p>A Hurmet data frame can contain formulas somewhat similar to a spreadsheet. Here’s an example:</p>
-<p><span class="hurmet-calc" data-entry="format = &quot;h3&quot;"></span></p>
-<p><span class="hurmet-calc" data-entry="V = '3.1 kips'"></span></p>
-<p><span class="hurmet-calc" data-entry="dist = 
-   ``Level|  W   | h  |  W × h  |        F         | V_i
-          | kips | ft | kip·ft  |       kips       | kips
-        4 | 1.2  | 33 | = W × h |=: V × Wh / Wh.Sum| = F
-        3 | 2.2  | 22 |         |                  | = F + V_i′
-        2 | 2.3  | 11 |         |                  |
-        1 | 4.0  |  0 |         |                  |
-      Sum |=sum()|    | =sum()  |       =sum()     | = V_i′``"></span></p>
-<p>Remember that a data frame is written as pipe-separated values. Those values can be cell formulas. So the content of that calculation zone looks like this:</p>
-<pre><code>dist = 
-``Level|  W   | h  |  W × h  |        F         | V_i
-       | kips | ft | kip·ft  |       kips       | kips
-    4  | 1.2  | 33 | = W × h |=: V × Wh / Wh.Sum| = F
-    3  | 2.2  | 22 |         |                  | = F + V_i′
-    2  | 2.3  | 11 |         |                  |
-    1  | 4.0  |  0 |         |                  |
-   Sum |=sum()|    | =sum()  |       =sum()     | = V_i′``</code></pre>
-   <p>A table formula:</p>
-   <ul>
-      <li>begins with a “=” just like a spreadsheet.</li>
-      <li>has variable names that are column headings, not “A1” type references.</li>
-      <li>returns a result not only to its own cell, but also to every non-formula cell below it.</li>
-      <li>begins with “=:” if the formula is unit-aware.</li>
-   </ul>
-   <p>In a table’s bottom row, a <code>sum()</code> function is valid with no arguments. It will return the sum of the column.</p>
-   <p>An active table can have units-of-measure. Just write unit names in row 2 of the pipe-separated input.</p>
-   <p>Data in any one column must all be the same data type and carry the same unit-of-measure.</p>
-   <p>A table variable can:</p>
-   <ul>
-      <li>omit spaces and characters that are invalid for identifiers. So “<code>Wh</code>” will call column “W × h”</li>
-      <li>… call a value from outside the table, such as <code>V</code>.</li>
-      <li>… call a cell from the previous row by appending a prime to a column heading, as in <code>V_i′</code>.</li>
-   </ul>
-   <p>Table calculations proceed column-wise. Subject to that constraint, you can call individual cells via dot notation, such as <code>Wh.Sum</code>.</p>
-   <p>Other calculation cells can call data from inside a table, using the same accessor notation as a data frame. The left column values can be used as keys to access data in the table.</p>
+<h3>Solid Angle</h3>
+<p>How much of the sun’s radiant energy is applied to the earth?</p>
+<p>Find the solid angle determined by the projected area of the earth compared to the total area of the sphere that is centered on the sun with a radius equal to earth’s orbit.</p>
+<p><span class="hurmet-calc" data-entry="format = &quot;r3&quot;"></span>, We’ll round to 3 significant digits</p>
+<p><span class="hurmet-calc" data-entry="r_earth = '6380 km'"></span>, approximate earth radius</p>
+<p><span class="hurmet-calc" data-entry="A_earth = π· r_earth²= ?? km²"></span></p>
+<p><span class="hurmet-calc" data-entry="r_orbit = '150000000 km'"></span>, radius of earth’s orbit</p>
+<p>Find the solid angle occupied by earth</p>
+<p><span class="hurmet-calc" data-entry="Ω = A_earth/r_orbit² = ? steradians"></span> </p>
+<p>Now find find earth’s share of the sun’s total radiant energy. There are <span class="hurmet-calc" data-entry="4 π"></span> steradians in any sphere, so</p>
+<p><span class="hurmet-calc" data-entry="f = Ω/(4 π) = ?"></span>, fraction of total energy.</p>
+<p>A remarkably small number. It’s a good thing that the sun emits a lot of energy.</p>
 
 </div> <!-- editor -->
 
