Add example note back into landing page.

--- a/site/index.html
+++ b/site/index.html
@@ -61,6 +61,8 @@
 
 <p>This is editable text. You can focus it and start typing. A calculation cell will open if you click on it. All calculations will update if you press <strong>Enter</strong> to close a calculation cell.</p>
 
+<p>This week’s example:</p>
+
 <h3>Solid Angle</h3>
 <p>How much of the sun’s radiant energy is applied to the earth?</p>
 <p>Find the solid angle determined by the projected area of the earth compared to the total area of the sphere that is centered on the sun with a radius equal to earth’s orbit.</p>
@@ -70,7 +72,7 @@
 <p><span class="hurmet-calc" data-entry="r_orbit = '150000000 km'"></span>, radius of earth’s orbit</p>
 <p>Find the solid angle occupied by earth</p>
 <p><span class="hurmet-calc" data-entry="Ω = A_earth/r_orbit² = ? steradians"></span> </p>
-<p>Now find find earth’s share of the sun’s total radiant energy. There are <span class="hurmet-calc" data-entry="4 π"></span> steradians in any sphere, so</p>
+<p>Now find find earth’s share of the sun’s total radiant energy. There are <span class="hurmet-calc" data-entry="4 π"></span> steradians in a sphere, so</p>
 <p><span class="hurmet-calc" data-entry="f = Ω/(4 π) = ?"></span>, fraction of total energy.</p>
 <p>A remarkably small number. It’s a good thing that the sun emits a lot of energy.</p>
 
