Make steradians a unit-less quantity.

--- a/site/index.html
+++ b/site/index.html
@@ -71,7 +71,7 @@
 <p><span class="hurmet-calc" data-entry="A_earth = π· r_earth²= ?? km²"></span></p>
 <p><span class="hurmet-calc" data-entry="r_orbit = '150000000 km'"></span>, radius of earth’s orbit</p>
 <p>Find the solid angle occupied by earth</p>
-<p><span class="hurmet-calc" data-entry="Ω = A_earth/r_orbit² = ? steradians"></span> </p>
+<p><span class="hurmet-calc" data-entry="Ω = A_earth/r_orbit² = ?? steradians"></span> </p>
 <p>Now find find earth’s share of the sun’s total radiant energy. There are <span class="hurmet-calc" data-entry="4 π"></span> steradians in a sphere, so</p>
 <p><span class="hurmet-calc" data-entry="f = Ω/(4 π) = ?"></span>, fraction of total energy.</p>
 <p>A remarkably small number. It’s a good thing that the sun emits a lot of energy.</p>
