--- a/site/index.html
+++ b/site/index.html
@@ -63,18 +63,17 @@
 
 <p>This week’s example:</p>
 
-<h3>Solid Angle</h3>
-<p>How much of the sun’s radiant energy is applied to the earth?</p>
-<p>Find the solid angle determined by the projected area of the earth compared to the total area of the sphere that is centered on the sun with a radius equal to earth’s orbit.</p>
-<p><span class="hurmet-calc" data-entry="format = &quot;r3&quot;"></span>, We’ll round to 3 significant digits</p>
-<p><span class="hurmet-calc" data-entry="r_earth = '6380 km'"></span>, approximate earth radius</p>
-<p><span class="hurmet-calc" data-entry="A_earth = π· r_earth²= ?? km²"></span></p>
-<p><span class="hurmet-calc" data-entry="r_orbit = '150000000 km'"></span>, radius of earth’s orbit</p>
-<p>Find the solid angle occupied by earth</p>
-<p><span class="hurmet-calc" data-entry="Ω = A_earth/r_orbit² = ?? steradians"></span> </p>
-<p>Now find find earth’s share of the sun’s total radiant energy. There are <span class="hurmet-calc" data-entry="4 π"></span> steradians in a sphere, so</p>
-<p><span class="hurmet-calc" data-entry="f = Ω/(4 π) = ?"></span>, fraction of total energy.</p>
-<p>A remarkably small number. It’s a good thing that the sun emits a lot of energy.</p>
+<h3>Simple span beam</h3>
+
+<p><span class="hurmet-calc" data-entry="L = '12 feet'"></span>, length</p>
+
+<p><span class="hurmet-calc" data-entry="w = '110 lbf/ft'"></span>, uniform line load</p>
+
+<p><span class="hurmet-calc" data-entry="P = '1000 lbf'"></span>, mid-span point load</p>
+
+<p><span class="hurmet-calc" data-entry="V = (w L)/2 + P/2 = ?? lbf"></span>, maximum shear</p>
+
+<p><span class="hurmet-calc" data-entry="M = (w L^2)/8 + (P L)/4 = ?? lbf-ft"></span>, max bending moment</p>
 
 </div> <!-- editor -->
 
