Fix typo in landing page.

--- a/site/index.html
+++ b/site/index.html
@@ -70,7 +70,7 @@
       <p><span class="hurmet-calc" data-entry="a + j\ b :"></span>  The letter “<span class="hurmet-calc" data-entry="j"></span>“ is now identical to <span class="hurmet-calc" data-entry="√(-1)"></span> by Hurmet definition. Be sure to write a space after <span class="hurmet-calc" data-entry="j"></span>.</p>
    </li>
    <li>
-      <p><span class="hurmet-calc" data-entry="r∠θ :"></span> The characters  will auto-correct into ∠ and <span class="hurmet-calc" data-entry="θ"></span> is in radians.</p>
+      <p><span class="hurmet-calc" data-entry="r∠θ :"></span> The characters /_ will auto-correct into ∠ and <span class="hurmet-calc" data-entry="θ"></span> is in radians.</p>
    </li>
 </ul>
 <p>Also, the character <strong>°</strong> is now an operator that multiplies the previous number by <span class="hurmet-calc" data-entry="π//180"></span>. So one can also write a polar notation as <span class="hurmet-calc" data-entry="r∠θ°"></span>.  The characters  will auto-correct into °</p>
