Fix another error in Euler example.

--- a/site/index.html
+++ b/site/index.html
@@ -84,11 +84,8 @@
 <p>Now let’s see how our example column measures up.</p>
 <p><span class="hurmet-calc" data-entry="L = '40 ft'"></span>, column length</p>
 <p><span class="hurmet-calc" data-entry="P_cr = (π² E I)/L² = ?? lbf"></span> <span class="hurmet-calc" data-entry="{`> P, ok` if P_cr > P; `< P, \red (no good)` otherwise} = @"></span></p>
-<p>Up above, we calculated that a 10,000 lbf load resulted in only a small compressive stress in the column. But this column is not governed by strength. It’s governed by stability. Notice that the yield strength <span class="hurmet-calc" data-entry="F_y"></span> does not appear anywhere in the Euler buckling equation. Column capacity is often governed by stiffness, not by yield strength.</p>
+<p>Up above, we calculated that a 130,000 lbf load resulted in an acceptable compressive stress in the column. But this column is not governed by strength. It’s governed by stability. Notice that the yield strength <span class="hurmet-calc" data-entry="F_y"></span> does not appear anywhere in the Euler buckling equation. Column capacity is often governed by stiffness, not by yield strength.</p>
 <p>Here’s a link to Euler’s paper:<br>https://scholarlycommons.pacific.edu/cgi/viewcontent.cgi?article=1237&amp;context=euler-works</p>
-
-</body>
-</html>
 
 </body>
 </html>
