Fix cube-quad example.

--- a/site/index.html
+++ b/site/index.html
@@ -65,14 +65,14 @@
 
 <h4>Cube-Quad Effect</h4>
 
-<p>Last week, I mentioned that ancient builders, before building a structure, would often build a small scale model. Scale models are helpful, they will not accurately predict full-size performance. For instance, columns have a square-cube effect. When you scale up a structure, a column’s cross-sectional area goes up by the square of the scale factor, but the weight of a floor goes up by the <em>cube</em> of the scale factor.</p>
+<p>Last week, I mentioned that ancient builders, before building a structure, would often build a small scale model. Scale models are helpful, but they will not accurately predict full-size performance. For instance, columns have a square-cube effect. When you scale up a structure, a column’s cross-sectional area goes up by the square of the scale factor, but the weight of a floor goes up by the <em>cube</em> of the scale factor.</p>
 
 <p>Ancient beams performed worse than columns. Instead of a square-cube effect, beams have a cube-quad effect. Say that a wooden beam has a rectangular cross section. It’s ability to resisting bending will increase with the cube of the scale factor.</p>
 
 <p class="indented"><span class="hurmet-calc" data-entry="&quot;Section modulus&quot; = ((beam width) × (beam depth)²) / 6"></span></p>
 
 <p>The problem is that beam bending will increase quadractically with the scale factor. </p>
-<p class="indented"><span class="hurmet-calc" data-entry="&quot;Bending&quot; = density × (tributory width) × (floor thickness) × (beam length)²"></span></p>
+<p class="indented"><span class="hurmet-calc" data-entry="&quot;Bending&quot; = (density × (tributory width) × (floor thickness) × (beam length)²) / 8"></span></p>
 
 <p>Configurations like domes or arches can be built so that all forces are compressive and their square-cube inaccuracy could be overcome by the very high compressive strengths of materials like masonry or stone.</p>
 
