Update Pi example.

--- a/site/index.html
+++ b/site/index.html
@@ -282,7 +282,7 @@
 <p>After Newton and Leibnitz invented calculus, the polygon method was augmented by the Taylor series for arctangent at 1:  <span class="hurmet-calc" data-entry="π//4 = 1 - 1//3 + 1//5 - 1//7 \cdots"></span>   That series can be continued to any required accuracy.</p>
 <p>But the Taylor series converges very slowly. I find the Viète series more interesting. He derived it from the Archimedes polygon method. From that method, he derived:</p>
 <p><span class="hurmet-calc" data-entry="2/π = √2/2 · (√(2+ √2))/2 · √(2 + √(2+ √2))/2 \cdots"></span></p>
-<p>That converges much faster the Taylor series. Here’s an example:</p>
+<p>That converges much faster the Taylor series. Let’s demonstrate that by calculating ten terms:</p>
 <p>
 <span class="hurmet-calc" data-entry="function viete(n)
     product = 1
