Fix Pi example by re-inserting Viete series.

--- a/site/index.html
+++ b/site/index.html
@@ -70,6 +70,7 @@
 <p>After Newton and Leibnitz invented calculus, the polygon method was augmented by the Taylor series for arctangent at 1: <span class="hurmet-calc" data-entry="π//4 = 1 - 1//3 + 1//5 - 1//7 \cdots"></span> That series can be continued to any required accuracy and was used with hand-calculations to gradually increase accuracy up to 808 decimal places in 1947.</p>
 <p>Then computer calculations and elliptic functions took over. The current record is 50,000,000,000,000 digits.</p>
 <p>The Taylor series is not a quick way to compute <span class="hurmet-calc" data-entry="π"></span>.  It converges very slowly. What I find more interesting is an infinite series developed by Francois Viète in 1597, before calculus. From the Archimedes polygon method, he derived this series:</p>
+<p><span class="hurmet-calc" data-entry="2/π = √2/2 · (√(2+ √2))/2 · √(2 + √(2+ √2))/2 \cdots"></span></p>
 <p>That converges much faster the Taylor series. Let’s demonstrate that by calculating ten terms:</p>
 <p>
 <span class="hurmet-calc" data-entry="function viete(n)
