--- a/site/index.html
+++ b/site/index.html
@@ -71,7 +71,7 @@
 <p>Then computer calculations and elliptic functions took over. The current record is 50,000,000,000,000 digits.</p>
 <p>The Taylor series is not a quick way to compute <span class="hurmet-calc" data-entry="π"></span>.  It converges very slowly. What I find more interesting is an infinite series developed by Francois Viète in 1597, before calculus. From the Archimedes polygon method, he derived this series:</p>
 <p><span class="hurmet-calc" data-entry="2/π = √2/2 · (√(2+ √2))/2 · √(2 + √(2+ √2))/2 \cdots"></span></p>
-<p>That converges much faster the Taylor series. Let’s demonstrate that by calculating ten terms:</p>
+<p>That converges much faster than the Taylor series. Let’s demonstrate that by calculating ten terms:</p>
 <p>
 <span class="hurmet-calc" data-entry="function viete(n)
     product = 1
